# Quake-III-Arena

./: .gitignore
code/: CMakeLists.txt
code/client/: snd_mix.c
code/game/: q_math.c
code/q3_ui/: CMakeLists.txt
code/renderer/: tr_shader.c
code/unix/: linux_glimp.c  unix_shared.c
